feat: Kapsamlı Geliştirme ve Yeniden Yapılandırma
Bu commit, uygulamanın genel yapısını, kullanıcı deneyimini ve kurulum sürecini iyileştiren bir dizi büyük güncelleme içerir.

Ana Değişiklikler:
- **Kullanıcı Arayüzü (UI/UX):** Ana pencere, daha modern ve kullanıcı dostu bir tasarıma kavuşturuldu. Renk paleti ve yerleşimler iyileştirildi.
- **Otomatik Kurulum (Self-Setup):** Program artık ilk çalıştırmada kredi kartı bilgilerinin eksik olduğunu algılayıp, kullanıcıyı arayüz üzerinden yönlendirerek kurulumu kendi kendine yapabiliyor. `setup_cc.py` betiğini manuel çalıştırma ihtiyacı ortadan kaldırıldı.
- **Installer Geliştirmesi:** `installer.py`, oluşturulan `.exe` dosyasına gerekli görsel varlıkları (`.ico`, `.png`) dahil edecek ve kullanıcı için boş bir `.env` dosyası oluşturacak şekilde güncellendi.
- **README Güncellemesi:** Proje dokümantasyonu, son kullanıcılar için kurulum adımlarını basitleştirecek ve geliştiriciler için daha net talimatlar içerecek şekilde tamamen yeniden yazıldı.
- **Kod Yapısı:** `setup_cc.py` ve `main.py` arasındaki mantık, daha modüler ve tekrar kullanılabilir hale getirildi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,34 @@
+# Python dosyaları
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
 
+# Derleme çıktıları
 build/
 dist/
 *.spec
 
+# Gizli dosyalar ve şifreler - ÇOK ÖNEMLİ - AMAN HA
+secret.key
+cc.dat
 .env
 
-*.lnk
-
+# Çalışma zamanında oluşturulan dosyalar
+captcha.png
+captcha.txt
+sms.txt
+sms_mode.flag
 *.log
+
+# İşletim sistemi tarafından oluşturulan dosyalar
+.DS_Store
+Thumbs.db
+
+# IDE / Editör özel dosyaları
+.vscode/
+.idea/
